fix: remove z-index from hamburger

--- a/english-for-kids/src/styles/layout/header.scss
+++ b/english-for-kids/src/styles/layout/header.scss
@@ -9,7 +9,6 @@
 
   &__hamburger-open,
   &__hamburger-closed {
-    z-index: 10;
     height: 59px;
     width: 59px;
     transition: 0.3s;
